final  changes done before  deployement